# rosneuro_pong

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: pong.launch
msg/: Ball.msg  Game.msg  GameInfo.msg  Paddle.msg
src/: __init__.py
src/pong/: PongBot.py  PongGame.py  PongNode.py
src/rosneuro_pong/: PongGame.py  PongNode.py  __init__.py  constants.py
