<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_pong</name>
  <version>0.1.0</version>
  <description>The rosneuro package for pong game</description>

  <maintainer email="tommaso.cortecchia@studenti.unipd.it">Tommaso Cortecchia</maintainer>

  <author email="tommaso.cortecchia@studenti.unipd.it">Tommaso Cortecchia</author>
  
  <license>GPLv3</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosneuro_dl</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
